@@ -70,12 +70,10 @@ cString ChangeCase(const cString &strP, bool upperP)
 
 const section_filter_table_type section_filter_table[SECTION_FILTER_TABLE_SIZE] =
 {
-  /* description              tag    pid   tid   mask */
-  {trNOOP("PAT (0x00)"),      "PAT", 0x00, 0x00, 0xFF},
-  {trNOOP("NIT (0x40)"),      "NIT", 0x10, 0x40, 0xFF},
-  {trNOOP("SDT (0x42)"),      "SDT", 0x11, 0x42, 0xFF},
-  {trNOOP("EIT (0x4E/0x4F)"), "EIT", 0x12, 0x4E, 0xFE},
-  {trNOOP("EIT (0x5X)"),      "EIT", 0x12, 0x50, 0xF0},
-  {trNOOP("EIT (0x6X)"),      "EIT", 0x12, 0x60, 0xF0},
-  {trNOOP("TDT (0x70)"),      "TDT", 0x14, 0x70, 0xFF},
+  /* description                        tag    pid   tid   mask */
+  {trNOOP("PAT (0x00)"),                "PAT", 0x00, 0x00, 0xFF},
+  {trNOOP("NIT (0x40)"),                "NIT", 0x10, 0x40, 0xFF},
+  {trNOOP("SDT (0x42)"),                "SDT", 0x11, 0x42, 0xFF},
+  {trNOOP("EIT (0x4E/0x4F/0x5X/0x6X)"), "EIT", 0x12, 0x40, 0xC0},
+  {trNOOP("TDT (0x70)"),                "TDT", 0x14, 0x70, 0xFF},
 };
